# web_scraping_meta_tag

./: ac.csv  ac_description.csv  main.py  pyproject.toml  urls.csv
