[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "messyfunctionaldrawing"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9"
requests = "^2.23"
[tool.poetry.dev-dependencies]
